v1.2.1 fix images
