# controllers/productController.js
@@ -5,6 +5,7 @@ const uuid = require("uuid");
 const path = require("path");
 
 class ProductController {
+
     async create(req, res, next) {
         try {
             const {article_product, name_product, price_product, description_product, count_product, is_enabled, id_category} = req.body
@@ -19,15 +20,29 @@ class ProductController {
 
             const product = await Product.create({article_product, name_product, price_product,
                 url_main_image_product: filename, description_product, count_product, is_enabled, id_category})
+
             return res.json(product)
         } catch (e) {
             next(ApiError.badRequest(e.message))
         }
     }
+
     async getAll(req, res) {
-        const products = await Product.findAll()
+        let {id_category, limit, page} = req.query
+
+        page  = page || 1
+        limit = limit || 9
+        let offset = page * limit - limit
+
+        let products
+        if(!id_category) {
+            products = await Product.findAndCountAll({limit, offset})
+        } else {
+            products = await Product.findAndCountAll({where:{id_category}, limit, offset})
+        }
         return res.json(products)
     }
+
     async getOne(req, res, next) {
         try {
             const { id } = req.params;
@@ -42,6 +57,7 @@ class ProductController {
             next(ApiError.badRequest(e.message));
         }
     }
+
     async update(req, res, next) {
         try {
             const {id} = req.params
@@ -54,11 +70,11 @@ class ProductController {
                 return next(ApiError.badRequest({message: `Product with id ${id} not found`}))
             }
 
-            let filename = product.url_main_image_product; // добавлено
-            if (url_main_image_product) { // добавлено
-                filename = uuid.v4() + '.jpg' // добавлено
-                await url_main_image_product.mv(path.resolve(__dirname, '..', 'static', filename)) // добавлено
-            } // добавлено
+            let filename = product.url_main_image_product; 
+            if (url_main_image_product) { 
+                filename = uuid.v4() + '.jpg' 
+                await url_main_image_product.mv(path.resolve(__dirname, '..', 'static', filename)) 
+            } 
 
             await product.update({article_product, name_product, price_product, url_main_image_product: filename, description_product, count_product, is_enabled, id_category})
             return res.json(product)
