# swagger_output.json
@@ -47,6 +47,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -107,6 +110,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -123,6 +129,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -163,11 +172,19 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -398,6 +415,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -419,6 +441,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -431,6 +456,11 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           },
           {
@@ -449,6 +479,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -460,11 +493,19 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -478,11 +519,19 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -1229,36 +1278,55 @@
     "/product/": {
       "post": {
         "description": "",
+        "consumes": ["multipart/form-data"],
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "article_product": {
-                  "example": "any"
-                },
-                "name_product": {
-                  "example": "any"
-                },
-                "price_product": {
-                  "example": "any"
-                },
-                "description_product": {
-                  "example": "any"
-                },
-                "count_product": {
-                  "example": "any"
-                },
-                "is_enabled": {
-                  "example": "any"
-                },
-                "id_category": {
-                  "example": "any"
-                }
-              }
-            }
+            "name": "article_product",
+            "in": "formData",
+            "type": "string",
+            "example": "any"
+          },
+          {
+            "name": "name_product",
+            "in": "formData",
+            "type": "string",
+            "example": "any"
+          },
+          {
+            "name": "price_product",
+            "in": "formData",
+            "type": "number",
+            "example": "any"
+          },
+          {
+            "name": "description_product",
+            "in": "formData",
+            "type": "string",
+            "example": "any"
+          },
+          {
+            "name": "count_product",
+            "in": "formData",
+            "type": "number",
+            "example": "any"
+          },
+          {
+            "name": "is_enabled",
+            "in": "formData",
+            "type": "boolean",
+            "example": "any"
+          },
+          {
+            "name": "id_category",
+            "in": "formData",
+            "type": "string",
+            "example": "any"
+          },
+          {
+            "name": "url_main_image_product",
+            "in": "formData",
+            "type": "file",
+            "description": "The main image of the product"
           }
         ],
         "responses": {
@@ -1269,6 +1337,23 @@
       },
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "id_category",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
